--- a/docker/Dockerfile.rpmbuild-go
+++ b/docker/Dockerfile.rpmbuild-go
@@ -1,7 +1,8 @@
 ARG rpmbuild_channel
 ARG rpmbuild_image=rpmbuild-generic
+ARG rpmbuild_image_prefix
 # hadolint ignore=DL3007
-FROM deps-${rpmbuild_channel}_${rpmbuild_image}:latest
+FROM ${rpmbuild_image_prefix}${rpmbuild_image}:latest
 ARG go_version=1.18.2
 ARG go_checksum=e54bec97a1a5d230fc2f9ad0880fcbabb5888f30ed9666eca4a91c5a32e86cbc
 ARG packages
