--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ x-rpmbuild:
     protobuf-c: &protobuf_c_min_version 1.3.0
     protozero: &protozero_min_version 1.7.0
     sqlite_min_version: &sqlite_min_version 3.11.0
-  # Configuration for building every dlependency RPM.
+  # Configuration for building every dependency RPM.
   rpms:
     CGAL:
       image: rpmbuild-cgal
@@ -103,7 +103,7 @@ x-rpmbuild:
       version: &libpqxx_version 7.7.3-1
     libkml:
       image: rpmbuild-libkml
-      version: &libkml_version  1.3.0-1
+      version: &libkml_version 1.3.0-1
     libosmium:
       image: rpmbuild-libosmium
       version: &libosmium_version 2.18.0-1
