--- a/docker/Dockerfile.rpmbuild-geoint-pgdg
+++ b/docker/Dockerfile.rpmbuild-geoint-pgdg
@@ -1,27 +1,25 @@
 ARG rpmbuild_channel
-ARG rpmbuild_image=rpmbuild
+ARG rpmbuild_image=rpmbuild-pgdg
 FROM deps-${rpmbuild_channel}_${rpmbuild_image}:latest
 
-ARG gem_packages=""
-ARG packages=""
-ARG postgres_version
+ARG gem_packages
+ARG packages
+ARG python_packages
+
+# Switch to root temporarily for dependency installs.
+USER root
 
 # If any package dependencies are needed, install them.
 SHELL ["/bin/bash", "-euo", "pipefail", "-c"]
-# hadolint ignore=DL3028,DL3032,DL3033
+# hadolint ignore=DL3013,DL3028,DL3032,DL3033
 RUN --mount=type=cache,target=/var/cache/yum \
     /usr/local/bin/geoint-deps-repo.sh && \
-    /usr/local/bin/pgdg-repo.sh ${postgres_version} && \
-    /usr/local/bin/postgres-install.sh ${postgres_version} && \
     if [ -n "${packages}" ] ; then yum -q -y install ${packages}; fi && \
-    if [ -n "${gem_packages}" ] ; then gem install ${gem_packages}; fi && \
-    /usr/local/bin/rpmbuild-user.sh && \
-    rm -f /usr/local/bin/rpmbuild-user.sh && \
-    chown -R "${RPMBUILD_USER}:${RPMBUILD_GROUP}" /var/run/postgresql
+    if [ -n "${gem_packages:-}" ] ; then gem install ${gem_packages}; fi && \
+    if [ -n "${python_packages:-}" ] ; then pip3 install --disable-pip-version-check --no-cache-dir ${python_packages}; fi
 
-# Use unprivileged RPM build user and work directory by default.
+# Ensure proper permissions on PostgreSQL run directory (again).
+RUN chown -R "${RPMBUILD_USER}:${RPMBUILD_GROUP}" /var/run/postgresql
+
+# Switch back to RPM build user.
 USER ${RPMBUILD_USER}
-WORKDIR ${RPMBUILD_HOME}
-RUN echo "%postgres_version ${postgres_version}" >> "${RPMBUILD_HOME}/.rpmmacros" && \
-    echo "%postgres_dotless %(echo %{postgres_version} | awk '{ gsub(/\\\\./, \"\"); print substr(\$0, 1, 2) }')" >> "${RPMBUILD_HOME}/.rpmmacros" && \
-    echo "%postgres_instdir /usr/pgsql-%{postgres_version}" >> "${RPMBUILD_HOME}/.rpmmacros"
