--- a/docker/Dockerfile.rpmbuild-gdal
+++ b/docker/Dockerfile.rpmbuild-gdal
@@ -68,8 +68,7 @@ RUN --mount=type=cache,target=/var/cache/yum \
     "/tmp/sqlite-devel-${sqlite_version}${RPMBUILD_DIST}.x86_64.rpm" \
     && \
     rm -f /tmp/*.rpm && \
-    if [ -n "${packages}" ] ; then yum -y install ${packages}; fi && \
-    chown -R "${RPMBUILD_USER}:${RPMBUILD_GROUP}" /var/run/postgresql
+    if [ -n "${packages}" ] ; then yum -y install ${packages}; fi
 
 # Install Python 3 documentation and packages.
 RUN pip3 install --disable-pip-version-check --no-cache-dir --quiet --require-hashes \
