--- a/docker/Dockerfile.rpmbuild-geoint-deps
+++ b/docker/Dockerfile.rpmbuild-geoint-deps
@@ -2,16 +2,18 @@ ARG rpmbuild_channel
 ARG rpmbuild_image=rpmbuild
 FROM deps-${rpmbuild_channel}_${rpmbuild_image}:latest
 
-ARG gem_packages=""
-ARG packages=""
+ARG gem_packages
+ARG packages
+ARG python_packages
 
 # If any package dependencies are needed, install them.
 SHELL ["/bin/bash", "-euo", "pipefail", "-c"]
-# hadolint ignore=DL3028,DL3032,DL3033
+# hadolint ignore=DL3013,DL3028,DL3032,DL3033
 RUN --mount=type=cache,target=/var/cache/yum \
     /usr/local/bin/geoint-deps-repo.sh && \
-    if [ -n "${packages}" ] ; then yum -q -y install ${packages}; fi && \
-    if [ -n "${gem_packages}" ] ; then gem install ${gem_packages}; fi && \
+    if [ -n "${packages:-}" ] ; then yum -q -y install ${packages}; fi && \
+    if [ -n "${gem_packages:-}" ] ; then gem install ${gem_packages}; fi && \
+    if [ -n "${python_packages:-}" ] ; then pip3 install --disable-pip-version-check --no-cache-dir ${python_packages}; fi && \
     /usr/local/bin/rpmbuild-user.sh && \
     rm -f /usr/local/bin/rpmbuild-user.sh
 
