--- a/docker/Dockerfile.rpmbuild-geoint-pgdg
+++ b/docker/Dockerfile.rpmbuild-geoint-pgdg
@@ -1,6 +1,8 @@
 ARG rpmbuild_channel
 ARG rpmbuild_image=rpmbuild-pgdg
-FROM deps-${rpmbuild_channel}_${rpmbuild_image}:latest
+ARG rpmbuild_image_prefix
+# hadolint ignore=DL3007
+FROM ${rpmbuild_image_prefix}${rpmbuild_image}:latest
 
 ARG gem_packages
 ARG packages
