--- a/Makefile.el9
+++ b/Makefile.el9
@@ -257,7 +257,7 @@ uriparser: $(URIPARSER_RPM)
 
 ## Build patterns
 RPMS/x86_64/%.rpm RPMS/noarch/%.rpm: | .env
-	$(MAKE) $(call rpmbuild_image_parent,$*)
+	$(MAKE) -f Makefile.$(EL_VERSION) $(call rpmbuild_image_parent,$*)
 	$(call pull_if_ci,$(call rpmbuild_image,$*))
 	$(call build_unless_image_exists,$(call rpmbuild_image,$*))
 	COMPOSE_FILE=$(COMPOSE_FILE) $(DOCKER_COMPOSE) run --rm -T $(call rpmbuild_image,$*) \
