--- a/.github/workflows/ci.el9.yml
+++ b/.github/workflows/ci.el9.yml
@@ -85,6 +85,7 @@ jobs:
           - sbt
           - sqlite-pcre
           - uriparser
+          - wal-g
 
     steps:
       - name: Checkout repository
