--- a/Makefile.el7
+++ b/Makefile.el7
@@ -76,6 +76,7 @@ SFCGAL_RPM := $(call rpm_file,SFCGAL)
 SQLITE_PCRE_RPM := $(call rpm_file,sqlite-pcre)
 SQLITE_RPM := $(call rpm_file,sqlite)
 TBB_RPM := $(call rpm_file,tbb)
+WALG_RPM := $(call rpm_file,wal-g)
 
 # Build images and RPMs.
 RPMBUILD_BASE_IMAGES := \
@@ -120,7 +121,8 @@ RPMBUILD_RPMS := \
 	SFCGAL \
 	sqlite \
 	sqlite-pcre \
-	tbb
+	tbb \
+	wal-g
 
 
 ## General targets
@@ -184,6 +186,7 @@ distclean: .env
 	echo RPMBUILD_SQLITE_PACKAGES=$(shell ./scripts/buildrequires.py SPECS/$(EL_VERSION)/sqlite.spec) >> .env
 	echo RPMBUILD_SQLITE_PCRE_PACKAGES=$(shell ./scripts/buildrequires.py SPECS/$(EL_VERSION)/sqlite-pcre.spec) >> .env
 	echo RPMBUILD_TBB_PACKAGES=$(shell ./scripts/buildrequires.py SPECS/$(EL_VERSION)/tbb.spec) >> .env
+	echo RPMBUILD_WALG_PACKAGES=$(shell ./scripts/buildrequires.py SPECS/$(EL_VERSION)/wal-g.spec --define postgres_version=$(POSTGRES_VERSION)) >> .env
 
 
 ## Image targets
@@ -257,11 +260,12 @@ sqlite-pcre: $(SQLITE_RPM) \
              $(SQLITE_PCRE_RPM)
 sqlite: $(SQLITE_RPM)
 tbb: $(TBB_RPM)
+wal-g: $(WALG_RPM)
 
 
 ## Build patterns
 RPMS/x86_64/%.rpm RPMS/noarch/%.rpm: | .env
-	$(MAKE) $(call rpmbuild_image_parent,$*)
+	$(MAKE) -f Makefile.$(EL_VERSION) $(call rpmbuild_image_parent,$*)
 	$(call pull_if_ci,$(call rpmbuild_image,$*))
 	$(call build_unless_image_exists,$(call rpmbuild_image,$*))
 	COMPOSE_FILE=$(COMPOSE_FILE) $(DOCKER_COMPOSE) run --rm -T $(call rpmbuild_image,$*) \
