--- a/Makefile.el9
+++ b/Makefile.el9
@@ -58,6 +58,7 @@ LIBKML_RPM := $(call rpm_file,libkml)
 LIBOSMIUM_RPM := $(call rpm_file,libosmium)
 LIBPQXX_RPM := $(call rpm_file,libpqxx)
 MAPNIK_RPM := $(call rpm_file,mapnik)
+MAPSERVER_RPM := $(call rpm_file,mapserver)
 OGDI_RPM := $(call rpm_file,ogdi)
 OPENSTREETMAP_CARTO_RPM := $(call rpm_file,openstreetmap-carto)
 OSM2PGSQL_RPM := $(call rpm_file,osm2pgsql)
@@ -105,6 +106,7 @@ RPMBUILD_RPMS := \
 	libosmium \
 	libpqxx \
 	mapnik \
+	mapserver \
 	ogdi \
 	openstreetmap-carto \
 	osm2pgsql \
@@ -170,6 +172,7 @@ distclean: .env
 	echo RPMBUILD_LIBOSMIUM_PACKAGES=$(shell ./scripts/buildrequires.py SPECS/$(EL_VERSION)/libosmium.spec) >> .env
 	echo RPMBUILD_LIBPQXX_PACKAGES=$(shell ./scripts/buildrequires.py SPECS/$(EL_VERSION)/libpqxx.spec --define postgres_version=$(POSTGRES_VERSION)) >> .env
 	echo RPMBUILD_MAPNIK_PACKAGES=$(shell ./scripts/buildrequires.py SPECS/$(EL_VERSION)/mapnik.spec --define postgres_version=$(POSTGRES_VERSION)) >> .env
+	echo RPMBUILD_MAPSERVER_PACKAGES=$(shell ./scripts/buildrequires.py SPECS/$(EL_VERSION)/mapserver.spec) >> .env
 	echo RPMBUILD_OGDI_PACKAGES=$(shell ./scripts/buildrequires.py SPECS/$(EL_VERSION)/ogdi.spec) >> .env
 	echo RPMBUILD_OPENSTREETMAP_CARTO_PACKAGES=$(shell ./scripts/buildrequires.py SPECS/$(EL_VERSION)/openstreetmap-carto.spec) >> .env
 	echo RPMBUILD_OSM2PGSQL_PACKAGES=$(shell ./scripts/buildrequires.py SPECS/$(EL_VERSION)/osm2pgsql.spec --define postgres_version=$(POSTGRES_VERSION)) >> .env
@@ -236,6 +239,7 @@ libkml: $(URIPARSER_RPM) \
 libosmium: $(LIBOSMIUM_RPM)
 libpqxx: $(LIBPQXX_RPM)
 mapnik: $(MAPNIK_RPM)
+mapserver: $(MAPSERVER_RPM)
 ogdi: $(OGDI_RPM)
 openstreetmap-carto: $(OPENSTREETMAP_CARTO_RPM)
 osm2pgsql: $(OSM2PGSQL_RPM)
