Upgrade PostGIS to 3.2.2 (#60)
Upgrade PostGIS to 3.2.2 on EL7 and 3.3.0 beta2 on EL9.

--- a/docker-compose.el9.yml
+++ b/docker-compose.el9.yml
@@ -173,7 +173,7 @@ x-rpmbuild:
       defines:
         gdal_min_version: *gdal_min_version
         geos_min_version: *geos_min_version
-        prerelease: alpha1
+        prerelease: beta2
         proj_min_version: *proj_min_version
         protobuf_min_version: *protobuf_min_version
         protobuf_c_min_version: *protobuf_c_min_version
