Added documentation/script for signing and pushing stable RPMs [skip ci]

--- a/docker/el7/Dockerfile.rpmbuild
+++ b/docker/el7/Dockerfile.rpmbuild
@@ -62,6 +62,7 @@ RUN --mount=type=cache,target=/var/cache/yum \
       rpm-sign \
       rpmdevtools \
       rpmlint \
+      rsync \
       unzip \
       vim \
       which \
