Use `--makefile=` rather than `MAKEFILES`
Otherwise there is target duplication:
```
Makefile.el9:155: warning: overriding recipe for target 'distclean'
Makefile.el9:155: warning: ignoring old recipe for target 'distclean'
Makefile.el9:163: warning: overriding recipe for target '.env'
Makefile.el9:163: warning: ignoring old recipe for target '.env'
Makefile.el9:203: warning: overriding recipe for target 'rpmbuild'
Makefile.el9:203: warning: ignoring old recipe for target 'rpmbuild'
Makefile.el9:207: warning: overriding recipe for target 'rpmbuild-fonts'
Makefile.el9:207: warning: ignoring old recipe for target
'rpmbuild-fonts'
Makefile.el9:212: warning: overriding recipe for target
'rpmbuild-generic'
Makefile.el9:212: warning: ignoring old recipe for target
'rpmbuild-generic'
Makefile.el9:217: warning: overriding recipe for target 'rpmbuild-pgdg'
Makefile.el9:217: warning: ignoring old recipe for target
'rpmbuild-pgdg'
```

--- a/Makefile.el7
+++ b/Makefile.el7
@@ -265,7 +265,7 @@ wal-g: $(WALG_RPM)
 
 ## Build patterns
 RPMS/x86_64/%.rpm RPMS/noarch/%.rpm: | .env
-	$(MAKE) -f Makefile.$(EL_VERSION) $(call rpmbuild_image_parent,$*)
+	$(MAKE) --makefile=Makefile.$(EL_VERSION) $(call rpmbuild_image_parent,$*)
 	$(call pull_if_ci,$(call rpmbuild_image,$*))
 	$(call build_unless_image_exists,$(call rpmbuild_image,$*))
 	COMPOSE_FILE=$(COMPOSE_FILE) $(DOCKER_COMPOSE) run --rm -T $(call rpmbuild_image,$*) \
