--- a/docker/el9/Dockerfile.rpmbuild-gdal
+++ b/docker/el9/Dockerfile.rpmbuild-gdal
@@ -149,7 +149,8 @@ RUN --mount=type=cache,target=/var/cache/dnf \
     "/tmp/uriparser-devel-${uriparser_version}${RPMBUILD_DIST}.x86_64.rpm" \
     && \
     rm -f /tmp/*.rpm && \
-    if [ -n "${packages}" ] ; then dnf -y install ${packages}; fi
+    if [ -n "${packages}" ] ; then dnf -y install ${packages}; fi && \
+    chown -R "${RPMBUILD_USER}:${RPMBUILD_GROUP}" /var/run/postgresql
 
 # Switch back to RPM build user.
 USER ${RPMBUILD_USER}
