--- a/docker-compose.el9.yml
+++ b/docker-compose.el9.yml
@@ -123,10 +123,11 @@ x-rpmbuild:
         proj_min_version: *proj_min_version
     mapserver:
       image: rpmbuild-mapserver
-      version: &mapserver_version 7.6.4-1
+      version: &mapserver_version 8.0.0-0
       defines:
         gdal_min_version: *gdal_min_version
         geos_min_version: *geos_min_version
+        prerelease: -beta2
         proj_min_version: *proj_min_version
     ogdi:
       image: rpmbuild-ogdi
