--- a/docker-compose.el9.yml
+++ b/docker-compose.el9.yml
@@ -63,7 +63,7 @@ x-rpmbuild:
       version: 1.2.5-1
     gdal:
       image: rpmbuild-gdal
-      version: &gdal_version 3.5.1-1
+      version: &gdal_version 3.5.1-2
       defines:
         geos_min_version: *geos_min_version
         proj_min_version: *proj_min_version
@@ -123,10 +123,11 @@ x-rpmbuild:
         proj_min_version: *proj_min_version
     mapserver:
       image: rpmbuild-mapserver
-      version: &mapserver_version 7.6.4-1
+      version: &mapserver_version 8.0.0-0
       defines:
         gdal_min_version: *gdal_min_version
         geos_min_version: *geos_min_version
+        prerelease: -rc1
         proj_min_version: *proj_min_version
     ogdi:
       image: rpmbuild-ogdi
