Add Smallstep CLI 0.21.0 RPM for EL7 and EL9.

--- a/.github/workflows/ci.el9.yml
+++ b/.github/workflows/ci.el9.yml
@@ -86,6 +86,7 @@ jobs:
           - sbt
           - spawn-fcgi
           - sqlite-pcre
+          - step-cli
           - uriparser
           - wal-g
 
