Add Smallstep CA 0.21.0 RPM for EL7 and EL9.

--- a/.github/workflows/ci.el7.yml
+++ b/.github/workflows/ci.el7.yml
@@ -80,6 +80,7 @@ jobs:
           - rubygem-pg
           - sbt
           - sqlite
+          - step-ca
           - step-cli
           - tbb
           - wal-g
