--- a/docker-compose.el7.yml
+++ b/docker-compose.el7.yml
@@ -234,8 +234,11 @@ x-rpmbuild:
     sqlite-pcre:
       image: rpmbuild-sqlite-pcre
       version: &sqlite_pcre_version 2007.1.20-1
+    step-ca:
+      image: rpmbuild-smallstep
+      version: &step_ca_version 0.21.0-1
     step-cli:
-      image: rpmbuild-step-cli
+      image: rpmbuild-smallstep
       version: &step_cli_version 0.21.0-1
     tbb:
       image: rpmbuild-tbb
@@ -557,7 +560,7 @@ services:
         packages: ${RPMBUILD_SQLITE_PCRE_PACKAGES}
         sqlite_version: *sqlite_version
       dockerfile: docker/el7/Dockerfile.rpmbuild-proj
-  rpmbuild-step-cli:
+  rpmbuild-smallstep:
     <<: *service_defaults
     build:
       <<: *build_defaults
