Fix hadolint errors.

--- a/docker/el9/Dockerfile.rpmbuild-go
+++ b/docker/el9/Dockerfile.rpmbuild-go
@@ -15,8 +15,8 @@ SHELL ["/bin/bash", "-c", "-o", "pipefail"]
 # Download and verify Go as ftp.
 COPY scripts/google_linux_signing_key.gpg /tmp/google_linux_signing_key.gpg
 USER ftp
-RUN cd /tmp && \
-    curl -sSL -O https://dl.google.com/go/go${go_version}.linux-amd64.tar.gz && \
+WORKDIR /tmp
+RUN curl -sSL -O https://dl.google.com/go/go${go_version}.linux-amd64.tar.gz && \
     curl -sSL -O https://dl.google.com/go/go${go_version}.linux-amd64.tar.gz.asc && \
     echo "${go_checksum}  go${go_version}.linux-amd64.tar.gz" | sha256sum && \
     HOME=/tmp gpg --import < google_linux_signing_key.gpg && \
@@ -24,8 +24,8 @@ RUN cd /tmp && \
     rm -fr /tmp/.gnupg /tmp/go${go_version}.linux-amd64.tar.gz.asc
 
 # Switch back to root to innstall Go and any other extra packages.
-# hadolint ignore=DL3040,DL3041
 USER root
+# hadolint ignore=DL3032,DL3040,DL3041
 RUN --mount=type=cache,target=/var/cache/dnf \
     tar -C /usr/local -xzf /tmp/go${go_version}.linux-amd64.tar.gz && \
     rm -f /tmp/go${go_version}.linux-amd64.tar.gz && \
@@ -33,6 +33,7 @@ RUN --mount=type=cache,target=/var/cache/dnf \
 
 # Switch back to default RPM building user.
 USER ${RPMBUILD_USER}
+WORKDIR ${RPMBUILD_HOME}
 
 # Setup Go directories.
 RUN mkdir -p ${GOPATH}/{bin,src/github.com}
