Smallstep CA & CLI (#66)
* Upgrade to use Go 1.19 and verify its signature after downloading.

* Upgrade journald-cloudwatch-logs to 0.2.1.

* Add Smallstep CLI 0.21.0 RPM for EL7 and EL9.

* Add Smallstep CA 0.21.0 RPM for EL7 and EL9.

* Fix hadolint errors.

* Upgrade journald-cloudwatch-logs to 0.2.2.

* Escape `${STEPPATH}` variable.

--- a/.github/workflows/ci.el7.yml
+++ b/.github/workflows/ci.el7.yml
@@ -81,6 +81,8 @@ jobs:
           - rubygem-pg
           - sbt
           - sqlite
+          - step-ca
+          - step-cli
           - tbb
           - wal-g
 
