--- a/.github/workflows/ci.el9.yml
+++ b/.github/workflows/ci.el9.yml
@@ -87,6 +87,8 @@ jobs:
           - sbt
           - spawn-fcgi
           - sqlite-pcre
+          - step-ca
+          - step-cli
           - uriparser
           - wal-g
 
