--- a/Makefile.el7
+++ b/Makefile.el7
@@ -73,8 +73,10 @@ RUBYGEM_LIBXML_RUBY_RPM := $(call rpm_file,rubygem-libxml-ruby)
 RUBYGEM_PG_RPM := $(call rpm_file,rubygem-pg)
 SBT_RPM := $(call rpm_file,sbt,noarch)
 SFCGAL_RPM := $(call rpm_file,SFCGAL)
-SQLITE_PCRE_RPM := $(call rpm_file,sqlite-pcre)
 SQLITE_RPM := $(call rpm_file,sqlite)
+SQLITE_PCRE_RPM := $(call rpm_file,sqlite-pcre)
+STEP_CA_RPM := $(call rpm_file,step-ca)
+STEP_CLI_RPM := $(call rpm_file,step-cli)
 TBB_RPM := $(call rpm_file,tbb)
 WALG_RPM := $(call rpm_file,wal-g)
 
@@ -121,6 +123,8 @@ RPMBUILD_RPMS := \
 	SFCGAL \
 	sqlite \
 	sqlite-pcre \
+	step-ca \
+	step-cli \
 	tbb \
 	wal-g
 
@@ -259,6 +263,8 @@ SFCGAL: $(CGAL_RPM) \
 sqlite-pcre: $(SQLITE_RPM) \
              $(SQLITE_PCRE_RPM)
 sqlite: $(SQLITE_RPM)
+step-ca: $(STEP_CA_RPM)
+step-cli: $(STEP_CLI_RPM)
 tbb: $(TBB_RPM)
 wal-g: $(WALG_RPM)
 
