--- a/docker-compose.el9.yml
+++ b/docker-compose.el9.yml
@@ -92,7 +92,7 @@ x-rpmbuild:
       version: &iniparser_version 4.1-1
     journald-cloudwatch-logs:
       image: rpmbuild-journald-cloudwatch-logs
-      version: &journald-cloudwatch-logs_version 0.2.0-1
+      version: &journald-cloudwatch-logs_version 0.2.2-1
     libgeotiff:
       image: rpmbuild-libgeotiff
       version: &libgeotiff_version 1.7.1-10
@@ -224,6 +224,12 @@ x-rpmbuild:
     sqlite-pcre:
       image: rpmbuild-sqlite-pcre
       version: &sqlite_pcre_version 2007.1.20-1
+    step-ca:
+      image: rpmbuild-smallstep
+      version: &step_ca_version 0.21.0-1
+    step-cli:
+      image: rpmbuild-smallstep
+      version: &step_cli_version 0.21.0-1
     uriparser:
       image: rpmbuild-uriparser
       version: &uriparser_version 0.9.6-1
@@ -541,6 +547,14 @@ services:
       args:
         <<: *build_args_defaults
         packages: ${RPMBUILD_SQLITE_PCRE_PACKAGES}
+  rpmbuild-smallstep:
+    <<: *service_defaults
+    build:
+      <<: *build_defaults
+      args:
+        <<: *build_args_defaults
+        rpmbuild_image: rpmbuild-generic
+      dockerfile: docker/el9/Dockerfile.rpmbuild-go
   rpmbuild-uriparser:
     <<: *service_defaults
     build:
