--- a/docker-compose.el7.yml
+++ b/docker-compose.el7.yml
@@ -80,7 +80,7 @@ x-rpmbuild:
         proj_min_version: *proj_min_version
     journald-cloudwatch-logs:
       image: rpmbuild-journald-cloudwatch-logs
-      version: &journald-cloudwatch-logs_version 0.2.0-1
+      version: &journald-cloudwatch-logs_version 0.2.2-1
     libkml:
       image: rpmbuild-libkml
       version: &libkml_version 1.3.0-1
@@ -234,6 +234,12 @@ x-rpmbuild:
     sqlite-pcre:
       image: rpmbuild-sqlite-pcre
       version: &sqlite_pcre_version 2007.1.20-1
+    step-ca:
+      image: rpmbuild-smallstep
+      version: &step_ca_version 0.21.0-1
+    step-cli:
+      image: rpmbuild-smallstep
+      version: &step_cli_version 0.21.0-1
     tbb:
       image: rpmbuild-tbb
       version: &tbb_version 2020.3-1
@@ -554,6 +560,14 @@ services:
         packages: ${RPMBUILD_SQLITE_PCRE_PACKAGES}
         sqlite_version: *sqlite_version
       dockerfile: docker/el7/Dockerfile.rpmbuild-proj
+  rpmbuild-smallstep:
+    <<: *service_defaults
+    build:
+      <<: *build_defaults
+      args:
+        <<: *build_args_defaults
+        rpmbuild_image: rpmbuild-generic
+      dockerfile: docker/el7/Dockerfile.rpmbuild-go
   rpmbuild-tbb:
     <<: *service_defaults
     build:
