--- a/docker/el9/Dockerfile.rpmbuild-pgdg
+++ b/docker/el9/Dockerfile.rpmbuild-pgdg
@@ -5,13 +5,12 @@ ARG rpmbuild_image_prefix
 FROM ${rpmbuild_image_prefix}${rpmbuild_image}:latest
 ARG packages
 ARG postgres_version
-ARG testing=0
 
 # If any package dependencies are needed, install them.
 SHELL ["/bin/bash", "-c"]
 # hadolint ignore=DL3040,DL3041
 RUN --mount=type=cache,target=/var/cache/dnf \
-    PGDG_TESTING=${testing} /usr/local/bin/pgdg-repo.sh ${postgres_version} && \
+    /usr/local/bin/pgdg-repo.sh ${postgres_version} && \
     /usr/local/bin/postgres-install.sh ${postgres_version} && \
     if [ -n "${packages}" ] ; then dnf -q -y install ${packages}; fi && \
     /usr/local/bin/rpmbuild-user.sh && \
