--- a/docker-compose.el9.yml
+++ b/docker-compose.el9.yml
@@ -32,7 +32,7 @@ x-rpmbuild:
     geos: &geos_min_version 3.11.0
     libosmium: &libosmium_min_version 2.18.0
     postgis_min_version: &postgis_min_version 3.3.0
-    proj: &proj_min_version 9.0.0
+    proj: &proj_min_version 9.1.0
     protobuf-c: &protobuf_c_min_version 1.3.0
     protobuf: &protobuf_min_version 3.0.0
     protozero: &protozero_min_version 1.7.0
@@ -54,7 +54,7 @@ x-rpmbuild:
         _smp_ncpus_max: 4
     armadillo:
       image: rpmbuild-armadillo
-      version: &armadillo_version 11.2.0-1
+      version: &armadillo_version 11.4.1-1
     arpack:
       image: rpmbuild-arpack
       version: &arpack_version 3.8.0-1
@@ -118,6 +118,7 @@ x-rpmbuild:
       image: rpmbuild-mapnik
       version: &mapnik_version 3.1.0-1
       defines:
+        gdal_min_version: *gdal_min_version
         geos_min_version: *geos_min_version
         postgis_min_version: *postgis_min_version
         proj_min_version: *proj_min_version
@@ -178,9 +179,9 @@ x-rpmbuild:
         protobuf_c_min_version: *protobuf_c_min_version
     proj:
       image: rpmbuild-proj
-      version: &proj_version 9.0.1-1
+      version: &proj_version 9.1.0-1
       defines:
-        data_version: "1.10"
+        data_version: "1.11"
         googletest_version: 1.11.0
     protozero:
       image: rpmbuild-protozero
@@ -214,7 +215,7 @@ x-rpmbuild:
       version: &rubygem_libxml_ruby_version 3.2.2-1
     sbt:
       image: rpmbuild-generic
-      version: &sbt_version 1.6.2-1
+      version: &sbt_version 1.7.2-1
       arch: noarch
     spawn-fcgi:
       image: rpmbuild-generic
