Fix `unused-rpmlintrc-filter "no-cleaning-of-buildroot"`

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -45,7 +45,7 @@ jobs:
 
       - name: Lint with rpmlint
         run: |
-          rpmlint --permissive --rpmlintrc .rpmlintrc SPECS/el?/*.spec
+          rpmlint --ignore-unused-rpmlintrc --permissive --rpmlintrc .rpmlintrc SPECS/el?/*.spec
 
   shellcheck:
     name: Lint - shellcheck
